--- a/#src/scss/base.scss
+++ b/#src/scss/base.scss
@@ -41,12 +41,61 @@ li {
     max-width: 1390px;
     padding: 0 15px;
     margin: 0 auto;
+    width: 100%;
     @media (max-width: 1280px) {
         max-width: 975px;
     }
-    @media (max-width: 1280px) {
+    @media (max-width: 1023px) {
         max-width: 720px;
         padding: 0 40px;
+    }
+    @media (max-width: 767px) {
+        padding: 0 15px;
+    }
+}
+
+.btn {
+    transform: skew(-10deg);
+    transition: all .3s ease;
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: "Gilroy-Heavy", sans-serif;
+    text-transform: uppercase;
+    
+
+    &_main {
+        flex: 0 1 327px;
+        max-width: 327px;
+        line-height: 100%;
+        font-size: 21.8122px;
+        width: 100%;
+        height: 59px;
+        border: 3px solid #C5FFD3;
+        box-shadow: 0px 7px 7px rgba(0, 0, 0, 0.28), 0px 0px 31px #00FF41, 0px 0px 7px #0CFC4F;
+        text-shadow: 0px 0px 31px #00FF41, 0px 0px 7px #0CFC4F;
+        &:hover {
+            color: #00721D;
+            background: linear-gradient(180deg, #C4FFD3 0%, #A5FFBC 100%);
+        }        
+    }
+    &_modal {
+        max-width: 245px;
+        height: 43px;
+        color: #fff;
+        font-size: 16px;
+        line-height: 20px;
+        background-color: #00BB1C;
+        box-shadow: 0px 6.70011px 18.8821px rgba(0, 124, 31, 0.8);
+    }
+    @media (max-width: 767px) {
+      flex: 0 1 40px;
+      height: 40px;
+      max-width: 225px;
+      width: 100%;
+      margin-bottom: 20px;
+      font-size: 15.0156px;
     }
 }
 
