--- a/#src/scss/fonts.scss
+++ b/#src/scss/fonts.scss
@@ -2,3 +2,4 @@
 @include font("Gilroy-Semibold", "Gilroy-Semibold", "600", "normal");
 @include font("SFProDisplay-Light", "SFProDisplay-Light", "300", "normal");
 @include font("SFProDisplay-Regular", "SFProDisplay-Regular", "400", "normal");
+@include font("SFProDisplay-Semibold", "SFProDisplay-Semibold", "600", "normal");
