--- a/#src/scss/hero.scss
+++ b/#src/scss/hero.scss
@@ -1,13 +1,21 @@
 .hero {
   position: relative;
   min-height: 100vh;
+  background-image: url(../img/bg.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
   overflow: hidden;
+  display: flex;
+  flex-direction: column;
   // .hero__wrapper
-
+  .container {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+  }
   &__wrapper {
+    flex-grow: 1;
   }
 
   // .hero__images
@@ -41,6 +49,9 @@
     @media (max-width: 1280px) {
       padding-top: 37px;
     }
+    @media (max-width: 767px) {
+      padding-top: 27px;
+    }
   }
 
   // .header__logo
@@ -50,6 +61,18 @@
     img {
       max-width: 100%;
       display: block;
+    }
+    &_md {
+      display: none;
+    }
+    @media (max-width: 1024px) {
+      display: none;
+      &_md {
+        display: block;
+      }
+    }
+    @media (max-width: 767px) {
+      max-width: 82px;
     }
   }
 
@@ -78,6 +101,12 @@
     &:hover {
       opacity: 1;
     }
+    @media (max-width: 767px) {
+      img {
+        width: 16.48px;
+        height: 16.48px;
+      }
+    }
   }
 }
 .images-hero {
@@ -94,6 +123,9 @@
   }
   @media (max-width: 1023px) {
     height: 40vh;
+    position: absolute;
+    top: 90px;
+    left: 0;
   }
   // .images-hero__smoke
 
@@ -133,6 +165,12 @@
       top: -60px;
       z-index: 1;
       animation: centerSmoke3 10s ease-out forwards;
+      @media (min-height: 1199px) {
+        top: 5%;
+      }
+      @media (min-height: 1365px) {
+        top: 25%;
+      }
       @media (max-width: 1280px) {
         max-width: 650px;
       }
@@ -153,6 +191,10 @@
     @media (max-width: 1280px) {
       max-width: 332px;
     }
+    @media (max-width: 920px) {
+      min-width: 332px;
+      right: 60px;
+    }
   }
 
   // .images-hero__hockey
@@ -169,6 +211,10 @@
     @media (max-width: 1280px) {
       max-width: 283px;
       left: 240px;
+    }
+    @media (max-width: 920px) {
+      min-width: 283px;
+      left: 160px;
     }
   }
 
@@ -202,6 +248,10 @@
     @media (max-width: 1280px) {
       max-width: 195px;
     }
+    @media (max-width: 920px) {
+      min-width: 195px;
+      left: 0px;
+    }
   }
 
   // .images-hero__basketball
@@ -229,6 +279,10 @@
     left: 0;
     width: 100%;
     z-index: 3;
+    @media (max-width: 920px) {
+      min-width: 944px;
+      left: -20%;
+    }
     img {
       max-width: 100%;
       display: block;
@@ -245,6 +299,10 @@
         bottom: 48px;
         height: 29px;
       }
+      @media (max-width: 920px) {
+        min-width: 692px;
+        right: -70px;
+      }
       @media (min-width: 1280px) {
         animation: line 10s ease-out forwards;
       }
@@ -259,6 +317,17 @@
   font-style: italic;
   max-width: 655px;
   margin: 30px auto 28px;
+
+  @media (max-width: 1023px) {
+    position: absolute;
+    bottom: 30%;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 100%;
+  }
+  @media (max-width: 767px) {
+    bottom: 30%;
+  }
   // .text-hero__title
 
   &__title {
@@ -288,12 +357,20 @@
         flex: 0 1 261px;
       }
     }
+    @media (max-width: 767px) {
+      font-size: 44.3541px;
+      &_2 {
+        font-size: 23.0413px;
+        flex: 0 1 130px;
+      }
+    }
   }
   // .text-hero__subtitle
 
   &__subtitle {
     font-size: 32.0982px;
     line-height: 40px;
+    text-align: center;
     font-family: "Gilroy-Semibold", sans-serif;
     span {
       color: #0CFC4F;
@@ -302,6 +379,10 @@
     @media (max-width: 1280px) {
       font-size: 30.5276px;
       line-height: 38px;
+    }
+    @media (max-width: 767px) {
+      font-size: 14.135px;
+      line-height: 18px;
     }
   }
 }
@@ -314,29 +395,21 @@
   justify-content: space-between;
   max-width: 545px;
   margin: 0 auto;
+
+  @media (max-width: 1023px) {
+    position: absolute;
+    bottom: 23%;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 100%;
+  }
+  @media (max-width: 767px) {
+    flex-direction: column;
+  }
   // .info-hero__btn
 
   &__btn {
-    font-size: 21.8122px;
-    line-height: 100%;
-    border: 3px solid #C5FFD3;
-    box-shadow: 0px 7px 7px rgba(0, 0, 0, 0.28), 0px 0px 31px #00FF41, 0px 0px 7px #0CFC4F;
-    transform: skew(-10deg);
-    transition: all .3s ease;
-    color: #fff;
-    flex: 0 1 327px;
-    height: 59px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: #FFFFFF;
-    font-family: "Gilroy-Heavy", sans-serif;
-    text-transform: uppercase;
-    text-shadow: 0px 0px 31px #00FF41, 0px 0px 7px #0CFC4F;
-    &:hover {
-      color: #00721D;
-      background: linear-gradient(180deg, #C4FFD3 0%, #A5FFBC 100%);
-    }
+
   }
 
   // .info-hero__terms
@@ -351,6 +424,12 @@
     position: relative;
     transition: all .3s ease;
     cursor: pointer;
+
+    @media (max-width: 767px) {
+      font-size: 13.6384px;
+      line-height: 17px;
+    }
+
     svg {
       position: absolute;
       top: 1px;
@@ -364,6 +443,10 @@
       }
       path {
         transition: all .3s ease;
+      }
+      @media (max-width: 767px) {
+        width: 6px;
+        height: 11px;
       }
     }
     &:hover {
@@ -395,12 +478,7 @@
       animation: mainSmokeLeft 10s ease-out forwards;
       transform-origin: center;
       @media (max-width: 1280px) {
-        // max-width: 200px;
         bottom: -220px; 
-      }
-      @media (max-width: 1023px) {
-        // max-width: 800px;
-        // bottom: -300px; 
       }
 		}
 
@@ -435,16 +513,324 @@
         display: block;
       }
     }
-    // .shadows-hero__smoke-blick
-
-		// &__smoke-blick {
-    //   position: absolute;
-    //   bottom: 0;
-    //   left: 0;
-    //   z-index: -1;
-    //   mix-blend-mode: screen;
-		// }
 }
+
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 10;
+  background: rgba(6, 6, 6, 0.3);
+  backdrop-filter: blur(9px);
+  opacity: 0;
+  pointer-events: none;
+  transition: all .3s ease;
+  &.active {
+    opacity: 1;
+    pointer-events: all;
+  }
+		// .modal__info
+
+		&__info {
+		}
+}
+.modal-info {
+  transition: all .3s ease;
+  bottom: 0;
+  background-color: #fff;
+  width: 900px;
+  height: 65%;
+  z-index: 11;
+  position: relative;
+  @media (max-width: 1024px) {
+    width: 702px;
+    height: 80%;
+    margin: 0 33px;
+  }
+  @media (max-width: 767px) {
+    margin: 0 15px;
+    height: 90%;
+  }
+		// .modal-info__wrapper
+
+		&__wrapper {
+      overflow: hidden;
+      height: 98%;
+      padding: 31px 0 6px;
+		}
+
+		// .modal-info__close
+
+		&__close {
+      width: 30px;
+      height: 30px;
+      position: absolute;
+      top: -15px;
+      right: -15px;
+      cursor: pointer;
+      img {
+        max-width: 100%;
+        display: block;
+      }
+		}
+
+		// .modal-info__content
+
+		&__content {
+      overflow-y: auto;
+      height: 100%;
+      scrollbar-color: #458245 #C4C4C4;
+      scrollbar-width: thin;
+      padding: 20px 30px 30px 55px;
+      margin-right: 25px;
+      &::-webkit-scrollbar {
+        background-color: #C4C4C4;
+        width: 3px;
+      }
+      &::-webkit-scrollbar-thumb {
+        background-color: #129A48;
+      }
+      @media (max-width: 767px) {
+        margin-right: 11px;
+        padding: 0 25px 20px 22px;
+      }
+		}
+
+		// .modal-info__title
+
+		&__title {
+      font-size: 18px;
+      line-height: 21px;
+      font-family: "SFProDisplay-Semibold", sans-serif;
+      text-transform: uppercase;
+      margin-bottom: 20px;
+		}
+
+		// .modal-info__list
+
+		&__list {
+      font-size: 14px;
+      line-height: 16px;
+      font-family: "SFProDisplay-Light", sans-serif;
+
+			// .modal-info__list_1
+
+			&_1 {
+			}
+
+			// .modal-info__list_2
+
+			&_2 {
+			}
+		}
+
+		// .modal-info__list-item
+
+		&__list-item {
+      margin-bottom: 20px;
+      span {
+        font-family: "SFProDisplay-Semibold", sans-serif;
+      }
+      a {
+        color: #0A9F30;
+        display: inline-block;
+        position: relative;
+        &::before {
+          position: absolute;
+          content: '';
+          width: 100%;
+          height: 1px;
+          background-color: #0A9F30;
+          bottom: -2px;
+          left: 0;
+        }
+      }
+      &:last-child {
+        margin-bottom: 0;
+      }
+		}
+
+		// .modal-info__bonus-size
+
+		&__bonus-size {
+      color: #0A9F30;
+      max-width: 335px;
+      margin: 20px 0;
+      font-family: "SFProDisplay-Regular", sans-serif;
+		}
+
+		// .modal-info__max
+
+		&__max {
+      font-size: 14px;
+      line-height: 16px;
+      margin: 20px 0;
+      font-family: "SFProDisplay-Light", sans-serif;
+    }
+    
+    		// .modal-info__law
+
+		&__law {
+      font-size: 13.21px;
+      font-style: italic;
+      font-family: "SFProDisplay-Light", sans-serif;
+		}
+
+		// .modal-info__btn
+
+		&__btn {
+      margin: 55px auto 0;
+			// .modal-info__btn_md
+
+			&_md {
+        display: none;
+			}
+		}
+}
+
+
+
+
+
+.modal-info {
+
+}
+// .info-list {
+//   overflow-y: auto;
+//   margin-right: 8px;
+//   height: 100%;
+//   font-size: 26px;
+//   line-height: 31px;
+//   letter-spacing: -0.045em;
+//   scrollbar-color: #458245 #C4C4C4;
+//   scrollbar-width: thin;
+//   &::-webkit-scrollbar {
+//     background-color: #C4C4C4;
+//     width: 3px;
+//   }
+//   &::-webkit-scrollbar-thumb {
+//     background-color: #129A48;
+//   }
+//   @media (max-width: 990px) {
+//     font-size: 20px;
+//     line-height: 24px;
+//   }
+//   @media (max-width: 767px) {
+//     font-size: 20px;
+//     line-height: 24px;
+//     &::-webkit-scrollbar { width: 0; }
+//     -ms-overflow-style: none;
+//     scrollbar-width: none;
+//   }
+  
+//   // .info-list__title
+
+//   &__title {
+//     padding-left: 87px;
+//     text-transform: uppercase;
+//     margin-bottom: 40px;
+//     font-family: "SFProDisplay-Semibold", sans-serif;
+//     @media (max-width: 990px) {
+//       padding-left: 61px;
+//     }
+    
+//   }
+//   // .info-list__item
+
+//   &__item {
+//     position: relative;
+//     padding-left: 81px;
+//     margin-bottom: 35px;
+//     min-height: 34px;
+//     max-width: 830px;
+//     font-family: "SFProDisplay-Regular", sans-serif;
+//     &_1 {
+//       .info-list__num {
+//         top: 15px;
+//       }
+//     }
+//     &_3 {
+//       .info-list__num {
+//         top: 15px;
+//       }
+//     }
+//     p {
+//       margin: 0 0 35px 0;
+//       &:last-child {
+//         margin-bottom: 0;
+//       }
+//     }
+//     &:last-child {
+//       margin-bottom: 0;
+//     }
+//     span {
+//       font-family: "SFProDisplay-Light", sans-serif;
+//       color: #129A48;
+//     }
+//     @media (max-width: 990px) {
+//       padding-left: 61px;
+//       max-width: 500px;
+//       p {
+//         margin: 0 0 20px 0;
+//       }
+//       &_2 {
+//         .info-list__num {
+//           top: 10px;
+//         }
+//       }
+//     }
+//     @media (max-width: 375px) {
+//       max-width: 300px;
+//     }
+//   }
+//    // .info-list__link
+//    &__link {
+//     color: #129A48;
+//     font-family: "SFProDisplay-Light", sans-serif;
+//     text-decoration: underline;
+//     &_md {
+//       display: none;
+//     }
+//     @media (max-width: 1024px) {
+//       display: none;
+//       &_md {
+//         display: inline-block;
+//       }
+//     }
+//    }
+//    // .info-list__mail
+//    &__mail {
+//     color: #129A48;
+//     font-family: "SFProDisplay-Light", sans-serif;
+//     text-decoration: underline;
+//    }
+//   // .info-list__num
+
+//   &__num {
+//     position: absolute;
+//     left: 30px;
+//     top: 0;
+//     text-align: center;
+//     font-size: 48px;
+//     letter-spacing: -0.045em;
+//     color: #000 !important;
+//     font-family: "SFProDisplay-Semibold", sans-serif;
+//     @media (max-width: 990px) {
+//       left: 20px;
+//       font-size: 36px;
+//     }
+//     @media (max-width: 767px) {
+//       font-size: 36.8px;
+//       line-height: 44px;
+//       left: 20px;
+//     }
+//   }
+// }
 
 
 //animations 
@@ -538,3 +924,4 @@
     transform: translate(-40px,30px);
   }
 }
+
