--- a/#src/scss/base.scss
+++ b/#src/scss/base.scss
@@ -13,7 +13,7 @@ body {
 body {
     font-size: 14px;
     font-weight: 400;
-    overflow: hidden;
+    overflow-y: auto;
     min-height: 100vh;
     background-color: #cecece;
 }
