--- a/#src/scss/hero.scss
+++ b/#src/scss/hero.scss
@@ -8,6 +8,8 @@
   overflow: hidden;
   display: flex;
   flex-direction: column;
+  padding: 0 0 15px 0;
+  background-color: rgb(3, 46, 17);
   // .hero__wrapper
   .container {
     flex-grow: 1;
@@ -103,6 +105,7 @@
     top: 90px;
     left: 0;
   }
+
   // .images-hero__smoke
 
   &__smoke {
@@ -116,9 +119,12 @@
       bottom: 0;
       left: 170px;
       z-index: 2;
-      animation: centerSmoke1 10s ease-out forwards;
+      animation: centerSmoke1 7s ease-out forwards;
       @media (max-width: 1280px) {
         max-width: 411px;
+      }
+      @media (max-width: 640px) {
+        left: -30px;
       }
     }
 
@@ -128,7 +134,7 @@
       bottom: 0;
       right: -50px;
       z-index: 2;
-      animation: centerSmoke2 10s ease-out forwards;
+      animation: centerSmoke2 7s ease-out forwards;
       @media (max-width: 1280px) {
         max-width: 602px;
       }
@@ -140,7 +146,7 @@
       left: 35px; 
       top: -60px;
       z-index: 1;
-      animation: centerSmoke3 10s ease-out forwards;
+      animation: centerSmoke3 7s ease-out forwards;
       @media (min-height: 1199px) {
         top: 5%;
       }
@@ -149,6 +155,12 @@
       }
       @media (max-width: 1280px) {
         max-width: 650px;
+      }
+      @media (max-width: 640px) {
+        left: -50px;
+      }
+      @media (max-width: 414px) {
+        display: none;
       }
     }
   }
@@ -160,7 +172,7 @@
     bottom: 0;
     right: 115px;
     z-index: 1;
-    animation: footballPlayers 10s ease-out forwards;
+    animation: footballPlayers 7s ease-out forwards;
     img {
       max-width: 100%;
     }
@@ -171,6 +183,14 @@
       min-width: 332px;
       right: 60px;
     }
+    @media (max-width: 640px) {
+      right: 40px;
+    }
+    @media (max-width: 414px) {
+      max-width: 245px;
+      min-width: auto;
+      right: 20px;
+    }
   }
 
   // .images-hero__hockey
@@ -180,7 +200,7 @@
     bottom: 10px;
     left: 285px;
     z-index: 2;
-    animation: hockeyPlayer 10s ease-out forwards;
+    animation: hockeyPlayer 7s ease-out forwards;
     img {
       max-width: 100%;
     }
@@ -192,6 +212,17 @@
       min-width: 283px;
       left: 160px;
     }
+    @media (max-width: 640px) {
+      left: 40px;
+    }
+    @media (max-width: 414px) {
+      max-width: 209px;
+      min-width: auto;
+      left: -5%;
+    }
+    @media (max-width: 330px) {
+      left: -25%;
+    }
   }
 
   // .images-hero__particles
@@ -201,7 +232,7 @@
     bottom: -80px;
     left: 10px;
     opacity: .3;
-    animation: particles 10s ease-out forwards;
+    animation: particles 7s ease-out forwards;
     img {
       max-width: 100%;
     }
@@ -217,7 +248,7 @@
     bottom: 0;
     left: 115px;
     z-index: 1;
-    animation: tennisPlayer 10s ease-out forwards;
+    animation: tennisPlayer 7s ease-out forwards;
     img {
       max-width: 100%;
     }
@@ -227,6 +258,9 @@
     @media (max-width: 920px) {
       min-width: 195px;
       left: 0px;
+    }
+    @media (max-width: 640px) {
+      left: -100%;
     }
   }
 
@@ -238,13 +272,25 @@
     left: 50%;
     transform: translateX(-50%);
     z-index: 1;
-    animation: basketballPlayer 10s ease-out forwards;
+    animation: basketballPlayer 7s ease-out forwards;
     img {
       max-width: 100%;
     }
     @media (max-width: 1280px) {
       max-width: 112px;
       left: 51%;
+    }
+    @media (max-width: 640px) {
+      left: 41%;
+    }
+    @media (max-width: 414px) {
+      max-width: 83px;
+      min-width: auto;
+      left: 35%;
+    }
+    @media (max-width: 330px) {
+      left: 25%;
+      bottom: -20px;
     }
   }
   // .images-hero__100proc
@@ -258,6 +304,20 @@
     @media (max-width: 920px) {
       min-width: 944px;
       left: -20%;
+    }
+    @media (max-width: 640px) {
+      left: -45%;
+    }
+    @media (max-width: 414px) {
+      min-width: 555px;
+      bottom: -35px;
+      left: -40%;
+    }
+    @media (max-width: 375px) {
+      left: -47%;
+    }
+    @media (max-width: 330px) {
+      left: -65%;
     }
     img {
       max-width: 100%;
@@ -279,8 +339,13 @@
         min-width: 692px;
         right: -70px;
       }
+      @media (max-width: 414px) {
+        min-width: 407px;
+        bottom: 20px;
+        right: -40%;
+      }
       @media (min-width: 1280px) {
-        animation: line 10s ease-out forwards;
+        animation: line 7s ease-out forwards;
       }
     }
   }
@@ -294,6 +359,13 @@
   max-width: 655px;
   margin: 30px auto 28px;
 
+  @media (max-height: 667px) {
+    bottom: 25%;
+  }
+  @media (max-height: 568px) {
+    bottom: 17%;
+  }
+
   @media (max-width: 1023px) {
     position: absolute;
     bottom: 30%;
@@ -301,9 +373,19 @@
     transform: translateX(-50%);
     width: 100%;
   }
-  @media (max-width: 767px) {
+  @media (max-width: 800px) {
+    bottom: 35%;
+  }
+  @media (max-width: 769px) {
     bottom: 30%;
   }
+  @media (max-width: 640px) {
+    bottom: 35%;
+  }
+  @media (max-width: 414px) {
+    bottom: 31%;
+  }
+
   // .text-hero__title
 
   &__title {
@@ -372,6 +454,12 @@
   max-width: 545px;
   margin: 0 auto;
 
+  @media (max-height: 668px) {
+    bottom: 13%;
+  }
+  @media (max-height: 568px) {
+    bottom: 5% !important;
+  }
   @media (max-width: 1023px) {
     position: absolute;
     bottom: 23%;
@@ -379,8 +467,20 @@
     transform: translateX(-50%);
     width: 100%;
   }
+  @media (max-width: 800px) {
+    bottom: 30%;
+  }
+  @media (max-width: 769px) {
+    bottom: 23%;
+  }
   @media (max-width: 767px) {
     flex-direction: column;
+  }
+  @media (max-width: 640px) {
+    bottom: 26%;
+  }
+  @media (max-width: 414px) {
+    bottom: 22%;
   }
 
   // .info-hero__terms
@@ -446,7 +546,7 @@
       left: 0;
       bottom: 0;
       z-index: 2;
-      animation: mainSmokeLeft 10s ease-out forwards;
+      animation: mainSmokeLeft 7s ease-out forwards;
       transform-origin: center;
       @media (max-width: 1280px) {
         bottom: -220px; 
@@ -460,7 +560,7 @@
       right: 0;
       bottom: 0;
       z-index: 2;
-      animation: mainSmokeRight 10s ease-out forwards;
+      animation: mainSmokeRight 7s ease-out forwards;
       @media (max-width: 1280px) {
         // max-width: 800px;
         bottom: -220px; 
@@ -514,6 +614,7 @@
   height: 65%;
   z-index: 11;
   position: relative;
+
   @media (max-width: 1024px) {
     width: 702px;
     height: 80%;
@@ -544,6 +645,12 @@
         max-width: 100%;
         display: block;
       }
+      @media (max-width: 640px) {
+        width: 20px;
+        height: 22px;
+        top: -10px;
+        right: -10px;
+      }
 		}
 
 		// .modal-info__content
@@ -551,10 +658,10 @@
 		&__content {
       overflow-y: auto;
       height: 100%;
-      scrollbar-color: #458245 #C4C4C4;
-      scrollbar-width: thin;
       padding: 20px 30px 30px 55px;
       margin-right: 25px;
+      scrollbar-width: thin;
+      scrollbar-color: #129A48 #C4C4C4;
       &::-webkit-scrollbar {
         background-color: #C4C4C4;
         width: 3px;
