--- a/bonus-100-percent/css/style.css
+++ b/bonus-100-percent/css/style.css
@@ -554,6 +554,10 @@ input:focus::placeholder {
   fill: #0CFC4F;
 }
 
+.info-hero__btn_md {
+  display: none;
+}
+
 .shadows-hero {
   position: absolute;
   bottom: -10px;
@@ -691,9 +695,29 @@ input:focus::placeholder {
 }
 
 .modal-info__list {
-  font-size: 14px;
-  line-height: 16px;
+  font-size: 16px;
+  line-height: 19px;
   font-family: "SFProDisplay-Light", sans-serif;
+}
+
+.modal-info__list-link {
+  color: #0A9F30;
+  display: inline-block;
+  position: relative;
+}
+
+.modal-info__list-link::before {
+  position: absolute;
+  content: '';
+  width: 100%;
+  height: 1px;
+  background-color: #0A9F30;
+  bottom: -1px;
+  left: 0;
+}
+
+.modal-info__list-link_md {
+  display: none;
 }
 
 .modal-info__list-item {
@@ -706,18 +730,6 @@ input:focus::placeholder {
 
 .modal-info__list-item a {
   color: #0A9F30;
-  display: inline-block;
-  position: relative;
-}
-
-.modal-info__list-item a::before {
-  position: absolute;
-  content: '';
-  width: 100%;
-  height: 1px;
-  background-color: #0A9F30;
-  bottom: -2px;
-  left: 0;
 }
 
 .modal-info__list-item:last-child {
@@ -732,8 +744,8 @@ input:focus::placeholder {
 }
 
 .modal-info__max {
-  font-size: 14px;
-  line-height: 16px;
+  font-size: 16px;
+  line-height: 18px;
   margin: 20px 0;
   font-family: "SFProDisplay-Light", sans-serif;
 }
@@ -745,7 +757,7 @@ input:focus::placeholder {
 }
 
 .modal-info__btn {
-  margin: 55px auto 0;
+  margin: 55px auto 25px;
 }
 
 .modal-info__btn_md {
@@ -1222,6 +1234,10 @@ input:focus::placeholder {
 
   .header__logo {
     max-width: 82px;
+  }
+
+  .socials__item {
+    margin-right: 12px;
   }
 
   .socials__item img {
